# governed

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: GUIDE.md  RESPONSIBLE_AI.md  ROADMAP.md
examples/: 01_basic.py  02_custom_tool.py  03_offline_scripted.py  04_guardrails_and_cost.py  05_config_driven.py
skills/csv_profiling/: SKILL.md
skills/incident_summary/: SKILL.md
skills/safe_code_change/: SKILL.md
src/governed/: __init__.py  agent.py  bootstrap.py  cli.py  config.py  contracts.py
src/governed/llm/: __init__.py  anthropic_client.py  base.py  config.py  factory.py  gemini_client.py  openai_client.py  policy.py  scripted.py
src/governed/memory/: __init__.py  optimizer.py  session.py  store.py  transcript.py
src/governed/observability/: __init__.py  audit.py  decision_ledger.py  events.py  exporters.py  logger.py  telemetry.py
src/governed/prompts/: __init__.py  system.py
src/governed/security/: __init__.py  content_safety.py  guardrails.py  policy.py
src/governed/skills/: __init__.py  loader.py
src/governed/tools/: __init__.py  base.py  code_execution.py  control.py  data_analysis.py  errors.py  filesystem.py  registry.py
tests/: conftest.py  test_agent.py  test_bootstrap.py  test_cancellation.py  test_cli.py  test_code_execution.py  test_config_composition.py  test_content_safety.py  test_contracts.py  test_data_analysis.py  test_decision_ledger.py  test_gemini_client.py  test_governance.py  test_guardrails.py  test_llm_factory.py  test_monitoring_exporters.py  test_optimizer.py  test_plugin_registries.py  test_skills.py  test_telemetry.py  test_tools.py
